# OpenGLTesting

./: .gitignore  CMakeLists.txt  README.md  Shader.h  main.cpp
01_GettingStarted/03_HelloWindow/: main.cpp
01_GettingStarted/04_HelloTriangle/: main1.cpp  main2.cpp
01_GettingStarted/05_Shaders/: main.cpp  main1.cpp  main2.cpp
01_GettingStarted/06_Textures/: main1.cpp  main2.cpp
0X_InPractice/: ball_object.cpp  ball_object.h  game.cpp  game.h  game_level.cpp  game_level.h  game_object.cpp  game_object.h  main.cpp  menu.cpp  menu.h  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  sprite_renderer.cpp  sprite_renderer.h  text.cpp  text.h  text_renderer.cpp  text_renderer.h  ui.cpp  ui.h  ui_renderer.cpp  ui_renderer.h
0X_InPractice/levels/: 00.lvl
0X_InPractice/shaders/: quad.fs  quad.vs
shaders/: 0.6.1.shader.fs  0.6.2.shader.fs  3.3.shader.fs  3.3.shader.vs
snake/: snake.cpp
tictactoe/: tictactoe.cpp
